Added a splash screen and changed app icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">FlickerPic</string>
+    <string name="app_name">FlickrPic</string>
+    <string name="Splash_CD">Splash Screen with app icon</string>
 </resources>
