--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FlickrPic</string>
     <string name="Splash_CD">Splash Screen with app icon</string>
+    <string name="image_thumbnail">Recent images of Flickr</string>
+    <string name="image_id">Image Id</string>
 </resources>
